[gd_scene load_steps=4 format=3 uid="uid://dymffw6ntadbo"]

[ext_resource type="Script" uid="uid://xxn0xhde0xtl" path="res://level/interactables/pressure_plate.gd" id="1_5bdot"]
[ext_resource type="Texture2D" uid="uid://bjwnao17x8v8x" path="res://assets/sprites/icon.svg" id="2_3h8oc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj3bl"]
size = Vector2(84, 74)

[node name="PressurePlate" type="Area2D"]
script = ExtResource("1_5bdot")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0.500001, -12.75)
scale = Vector2(0.648437, 0.207032)
texture = ExtResource("2_3h8oc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -37)
shape = SubResource("RectangleShape2D_vj3bl")

[node name="Label" type="Label" parent="."]
offset_left = -26.0
offset_top = -98.0
offset_right = 28.0
offset_bottom = -75.0
text = "Pressure Plate"

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="ResetDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ResetDelayTimer" to="." method="_on_delayed_button_timer_timeout"]
